--- a/todolist.html
+++ b/todolist.html
@@ -10,6 +10,16 @@
 
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
+        <style>
+        .class1{
+            border:1px solid green
+        }
+        .completed{
+            text-decoration: line-through;
+            color:#949494
+        }
+        </style>
+
 </head>
 <body>
     <div id="app" class="container">
@@ -31,17 +41,20 @@
                     <li v-for="(todo, i) in todos" class="list-group-item" :key="i">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <input v-model="newTodo" class="form-check-input me-3" type="checkbox">
-                                <label class="form-check-label">{{i}} - {{ todo.title }}</label> 
+                                <input v-model="todo.completed" class="form-check-input me-3" type="checkbox">
+                                <!--{css class名稱:Boolean}-->
+                                <!--如果Boolean為true表示要用套用css class的樣式-->
+                                <!-- 如果要重複用class 要用{}包起來 -->
+                                <label :class="{completed:todo.completed}" class="form-check-label">{{i}} - {{ todo.title }}</label>
                                 <!-- 上方的命名todo  -->
                             </div>
-                            <button @click="removeTodo(i)" class="badge bg-danger rounded-pill border-0">X</button>
+                            <button @click="removeTodo(todo)" class="badge bg-danger rounded-pill border-0">X</button>
                         </div>
                         <input type="text" class="form-control" hidden>
                     </li>
                 </ul>
                 <div class="mt-3 d-flex justify-content-between">
-                    <strong class=" me-3">尚有 ? 個工作未完成</strong>
+                    <strong class=" me-3">尚有 {{remaining}} 個工作未完成</strong>
                     <button class="btn btn-warning me-3">清除完成工作</button>
                 </div>
             </div>
@@ -56,12 +69,16 @@
         const app = createApp({
             data(){
                 return{
+                    todos:JSON.parse(localStorage.getItem("todos") || "[]" ),
+                    // JSON轉型 如果讀不出資料就為空陣列
+
+
                     //todos:[] 陣列
-                    todos:[
-                    {"id": 1, "title": "作業1", "completed": false },
-                    {"id": 2, "title": "作業2", "completed": true },
-                    {"id": 3, "title": "作業3", "completed": false },
-                    ],
+                    // todos:[
+                    // {"id": 1, "title": "作業1", "completed": true },
+                    // {"id": 2, "title": "作業2", "completed": false },
+                    // {"id": 3, "title": "作業3", "completed": false },
+                    // ],
                     newTodo:" " //空字串
                 }
             },
@@ -80,18 +97,51 @@
                     });
                     this.newTodo=""   //this.newTodo=""執行完就清空(上方的input)
                 },
-                removeTodo(index){
+                removeTodo(item){
                 //  console.log(index)
-                // console.log(item)
+                //console.log(item)
                 //取出要刪除todo在陣列中位置的索引值
-                //const i = this.todos.indexOf(item) //1 找不到回傳-1
+                const index = this.todos.indexOf(item) //1 找不到回傳-1
                 
-                //刪除splice(從甚麼位置,刪除幾筆資料)
+                //刪除splice( index(從什麼位置) ㄝ1(刪除幾筆資料) )(從甚麼位置,刪除幾筆資料)
                 this.todos.splice(index,1)
+                }
+            },
+            //watch 監看 如果某一個值有做改變就執行裡面的function
+            watch:{
+                //監控newTodo的資料有沒有異動
+                //有，就執行handler這個function
+                // newTodo:{
+                //     handler(newTodo){
+                //         localStorage.setItem("todo",newTodo)
+                //     },
+                todos:{
+
+                    //sessionStorage在application查看 不同頁面有不同的sessionStorage的存取空間，瀏覽器一旦關掉了就不見了(php存取session的意思)
+                    //sessionStorage.setItem("key" , "value")
+
+                    //localStorage在localStorage查看 不同頁面共用同一個localStorage(頁面刷新資料還是會存放在裡面)所以就算關掉整個瀏覽器重新打開還是可以看到，除非特別去刪除
+                    //localStorage.setItem("key" , "value")
+
+                    handler(todos){
+                        //handler(newValue, oldValue) 測試用的時候可以用(newValue, oldValue)去執行{ 值改變時執行這裡的程式 }
+                        localStorage.setItem("todos",JSON.stringify(todos))  //JSON轉型
+                    },
+                    deep:true
+                    //deep屬性：設定成 true 就能監看物件中的屬性是否改變
+                }
+            },
+            //computed 函式用到 data 的資料，這些資料改變時，這個computed 函式就會被重新執行和求值
+            computed:{
+                remaining(){
+                    let notFinished = this.todos.filter(todo => !todo.completed) //!fals 
+                    return notFinished.length
                 }
             }
         }) 
         app.mount("#app")
+
+        console.log(localStorage.getItem("key1"))
     </script>
 </body>
 </html>
